# Crunchy-Bot

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  2  BotLogger.py  BotSettings.py  BotUtil.py  CrunchyBot.py  Dockerfile  Dockerfile.dev  MaraBot.py  README.md  RoleManager.py  bot.py  bot_util.py  check_todos.sh  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  logger.py  main.py  precommit.sh  pyproject.toml  requirements.txt  settings.py  template.env  test.py  userlist.py  userlistnode.py
.devcontainer/: Dockerfile  Dockerfile.db  Dockerfile.dev  devcontainer.json  docker-compose.dev.yml  init_db.py
cogs/: Beans.py  Bully.py  Interactions.py  Jail.py  Police.py  Quotes.py  Shop.py  Statistics.py  __init__.py  bully.py  chat.py  interactions.py  interactions_cog.py  jail.py  police.py  police_cog.py  quotes.py  quotes_cog.py  statistics.py  statistics_cog.py
control/: __init__.py  ai_manager.py  controller.py  event_manager.py  item_manager.py  logger.py  prediction_manager.py  role_manager.py  service.py  settings.py  settings_manager.py  types.py
datalayer/: Database.py  GuildSettings.py  ItemTrigger.py  JailList.py  JailListNode.py  LootBox.py  ModuleSettings.py  PoliceList.py  PoliceListNode.py  Quote.py  Setting.py  UserInteraction.py  UserInventory.py  UserJail.py  UserList.py  UserListNode.py  UserRankings.py  UserStats.py  __init__.py  atabase.py  chat_log.py  database.py  inventory.py  jail.py  lootbox.py  ootbox.py  police_list.py  prediction.py  prediction_stats.py  quote.py  ranking.py  settings.py  (+3 more)
(+459 files in other folders)
